# rust-backend

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.failed  Dockerfile.sample  Dockerfile.success  Makefile  README.md  diesel.toml
.github/workflows/: main.yml
aws/: codecommit.tf
config/: development.toml
migrations/2023-05-15-084941_create_solutions/: down.sql  up.sql
migrations/2023-06-20-144538_create_solutions_2/: down.sql  up.sql
migrations/2023-06-20-152536_create_solutions_3/: down.sql  up.sql
playbooks/: github.yaml  rust-backend.yaml
sql/: create_table.sql  insert.sql
src/: config.rs  errors.rs  lib.rs  main.rs  schema.rs
src/.modules/database/: connection.rs  solutions.rs
src/database/: mod.rs  solutions.rs  test.rs
src/http/: api.rs  mod.rs
src/http/errors/: handlers.rs  io.rs  mod.rs
src/http/resources/: mod.rs
src/http/resources/solutions/: handlers.rs  mod.rs
src/models/: solutions.rs
src/modules/database/: model.rs  schema.rs
src/routes/: healthz.rs  mod.rs  solutions.rs
