[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
diesel_codegen = "0.16.1"
chrono = { version = "0.4.24", features = ["serde"] }
config = "0.13.3"
frank_jwt = "3.1.3"
failure = "0.1.8"
failure_derive = "0.1.8"
slugify = "0.1.0"
log = "0.4.17"
env_logger = "0.10.0"
r2d2-diesel = "1.0.0"
rocket_contrib = "0.4.11"
rocket_codegen = "0.4.11"
