[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_cors = { version = "0.5.2", default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
scrypt = { version = "0.11.0", default-features = true }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
validator = "0.16.0"
validator_derive = "0.16.0"
slug = "0.1.4"
rand = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"

[dependencies.rocket]
version = "0.4.11"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[dev-dependencies]
once_cell = "1.9.0"

[features]
default = ["random-suffix"]

random-suffix = []
